# get-paper

./: README.md  cli.py  main.py  pyproject.toml  results.csv
.github/workflows/: main.yml
paper/: fetch.py  utils.py
scripts/: cli.py
src/get-papers-list/: main.py
src/get_paper/: main.py
